--- a/.github/workflows/selenium-ci.yml
+++ b/.github/workflows/selenium-ci.yml
@@ -43,13 +43,12 @@ jobs:
       - name: Set custom message
         id: set-message
         run: |
-          if [[ "${{ job.status }}" == "success" ]]; then
-            echo "All tests passed successfully for $GITHUB_REPOSITORY on branch $GITHUB_REF" >> $GITHUB_OUTPUT
-            echo "message= All tests passed successfully for $GITHUB_REPOSITORY on branch $GITHUB_REF" >> $GITHUB_OUTPUT
+          if [[ "${{ needs.build-and-test.result }}" == "success" ]]; then
+            printf "message=%s\n" "✅ All tests passed successfully for $GITHUB_REPOSITORY on branch $GITHUB_REF" >> $GITHUB_OUTPUT
           else
-            echo "Some tests failed in $GITHUB_REPOSITORY on branch $GITHUB_REF" >> $GITHUB_OUTPUT
-            echo "message= Some tests failed in $GITHUB_REPOSITORY on branch $GITHUB_REF" >> $GITHUB_OUTPUT
+            printf "message=%s\n" "❌ Some tests failed in $GITHUB_REPOSITORY on branch $GITHUB_REF" >> $GITHUB_OUTPUT
           fi
+
 
   notify:
     needs: build-and-test
