feat: close if block update

--- a/.github/workflows/selenium-ci.yml
+++ b/.github/workflows/selenium-ci.yml
@@ -40,25 +40,24 @@ jobs:
         id: run-tests
         run: mvn clean test -B
 
+      - name: Set custom message
+        id: set-message
+        run: |
+          if [ "${{ steps.run-tests.outcome }}" == "success" ]; then
+            echo "message=✅ All tests passed successfully for $GITHUB_REPOSITORY on branch $GITHUB_REF" >> $GITHUB_OUTPUT
+          else
+            echo "message=❌ Some tests failed in $GITHUB_REPOSITORY on branch $GITHUB_REF" >> $GITHUB_OUTPUT
+          fi
 
   notify:
     needs: build-and-test
     if: always()
     runs-on: ubuntu-latest
     steps:
-      - name: Set custom message
-        id: set-message
-        run: |
-          if [[ "${{ needs.build-and-test.result }}" == "success" ]]; then
-            printf "message=%s\n" "✅ All tests passed successfully for $GITHUB_REPOSITORY on branch $GITHUB_REF" >> $GITHUB_OUTPUT
-          else
-            printf "message=%s\n" "❌ Some tests failed in $GITHUB_REPOSITORY on branch $GITHUB_REF" >> $GITHUB_OUTPUT
-          fi  
-
       - name: Send Slack Notification
         uses: 8398a7/action-slack@v3
         with:
-          status: ${{ job.status }}
+          status: ${{ needs.build-and-test.result }}
           text: ${{ needs.build-and-test.outputs.message }}
           fields: repo,message,commit,author,action,eventName,ref
         env:
